crates/cli/tests/snapshots/run_node_test__pnpm__installs_correct_version.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 556
expression: get_assert_output(&assert)
---
▪▪▪▪ pnpm install
▪▪▪▪ pnpm:version
6.32.0

Tasks: 1 completed
 Time: 100ms



