crates/cli/tests/snapshots/run_node_test__pnpm__installs_correct_version_using_corepack.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 584
expression: get_assert_output(&assert)
---
▪▪▪▪ pnpm install
▪▪▪▪ pnpm:version
7.5.0

Tasks: 1 completed
 Time: 100ms



